# conway_gol_cpp

./: .gitignore  CMakeLists.txt
src/: conwayutils.h  main.cpp
